# IGA-Cpp

./: CMakeLists.txt  README.md  config.h.in  main.cpp
BSpline/: BSpline.cpp  BSpline.h  CMakeLists.txt
Common/: CMakeLists.txt  Vectors.cpp  Vectors.h
Results/Chapter 2/Figure 2-3/: Fig2-3-paraview.pvsm
Results/Chapter 2/Figure 2-6/: Figure2-6-paraview.pvsm  out.csv
Results/Chapter2/Figure 2-3/: out.csv
Results/Chapter2/Figure 2-5/: Figure2-5-paraview.pvsm  out.csv
